SLCORE-431 Do not skip plugins because of Node.js version